# curling-stone-tracker

./: .gitignore  LICENSE  README.md  compose.yaml  curling_sheet_plotting.py  curling_shot_tracker.py  curling_stone_detector.py  curling_video_to_images.py  file_rename.py  sheet_coordinates.py
curling_tracker_backend/: Dockerfile  database.db  pyproject.toml  requirements.txt  requirements_base.txt
curling_tracker_backend/src/curling_tracker/: __init__.py  api.py  clear.sql  commands.py  curling_camera.py  db.py  run.py  schema.sql  schemas.sql  sheet_coordinates.py
curling_tracker_backend/src/curling_tracker/util/: curling_image_processing.py  curling_sheet_plotting.py  curling_shot_tracker.py  curling_stone_detector.py
curling_tracker_backend/src/curling_tracker_backend/: __init__.py  api.py  async_yt_dlp.py  calibration_api.py  clear.sql  commands.py  config.py  curling_camera.py  curling_shot_tracker.py  dataset_schemas.sql  db.py  db_helper.py  run.py  schemas.sql  sheet_coordinates.py
curling_tracker_backend/src/curling_tracker_backend/scripts/: add_folder_to_dataset.py  curling_video_to_images.py
curling_tracker_backend/src/curling_tracker_backend/util/: async_yt_dlp.py  camera_utilities.py  curling_image_processing.py  curling_sheet_plotting.py  curling_shot_tracker.py  curling_stone_detector.py  curling_video_to_images.py
curling_tracker_frontend/: .prettierrc  Dockerfile  package-lock.json  package.json
label_studio/: compose.yaml
object_detection/: Dockerfile  compose.yaml  cuda_test.py  export_yolo.py  file_rename.py  prep_angled_dataset.sh  (+12 more)
(+29 files in other folders)
